--- a/app/src/main/res/layout/activity_country_detail.xml
+++ b/app/src/main/res/layout/activity_country_detail.xml
@@ -4,32 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
     android:orientation="vertical"
     tools:context=".CountryDetailActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:background="#00000000"
-        android:padding="10dp">
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="19dp">
-
-            <ImageView
-                android:id="@+id/buttonBack"
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:background="#616161"
-                android:padding="10dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/home" />
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,45 +22,9 @@
             android:paddingVertical="10dp"
             android:text="Common Name"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
+            android:textColor="#5E35B1"
             android:textSize="22dp"
             android:textStyle="bold" />
-        <TextView
-            android:id="@+id/textViewOfficialName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Official Name: "
-            android:textColor="#BDB8B8"
-            android:textSize="20dp" />
-        <TextView
-            android:id="@+id/textViewCapital"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Capital: "
-            android:textColor="#BDB8B8"
-            android:textSize="20dp" />
-        <TextView
-            android:id="@+id/textViewContinent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Continent: "
-            android:textColor="#BDB8B8"
-            android:textSize="20dp" />
-        <TextView
-            android:id="@+id/textViewPopulation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Population:"
-            android:textColor="#BDB8B8"
-            android:textSize="20dp" />
-        <TextView
-            android:id="@+id/textViewLanguage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Languages: "
-            android:textColor="#BDB8B8"
-            android:textSize="20dp" />
-
         <ImageView
             android:id="@+id/imageViewItem"
             android:layout_width="277dp"
@@ -91,6 +32,43 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:scaleType="centerCrop" />
+        <TextView
+            android:id="@+id/textViewOfficialName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Official Name"
+            android:textColor="#D81B60"
+            android:textSize="20dp" />
+        <TextView
+            android:id="@+id/textViewCapital"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Capital: "
+            android:textColor="#D81B60"
+            android:textSize="20dp" />
+        <TextView
+            android:id="@+id/textViewContinent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Continent: "
+            android:textColor="#D81B60"
+            android:textSize="20dp" />
+        <TextView
+            android:id="@+id/textViewPopulation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Population:"
+            android:textColor="#D81B60"
+            android:textSize="20dp" />
+        <TextView
+            android:id="@+id/textViewLanguage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Languages: "
+            android:textColor="#D81B60"
+            android:textSize="20dp" />
+
     </LinearLayout>
 
 </LinearLayout>
