--- a/app/src/main/res/layout/custom_country_item_listview.xml
+++ b/app/src/main/res/layout/custom_country_item_listview.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#000000"
     android:orientation="horizontal"
     android:padding="10dp">
 
@@ -30,7 +29,7 @@
             android:paddingVertical="5dp"
             android:paddingLeft="10dp"
             android:text="Name"
-            android:textColor="#FFFFFF"
+            android:textColor="#535353"
             android:textSize="20dp"
             android:textStyle="bold" />
         <TextView
@@ -40,7 +39,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
             android:text="Region"
-            android:textColor="#BDB8B8"
+            android:textColor="#535353"
             android:textSize="18dp"
             android:textStyle="italic" />
     </LinearLayout>
