--- a/app/src/main/res/layout/fragment_world.xml
+++ b/app/src/main/res/layout/fragment_world.xml
@@ -15,6 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:background="#C2EFE6"
+
         app:tabGravity="fill"
         app:tabMode="fixed" />
     <androidx.viewpager.widget.ViewPager
